<resources>
    <string name="app_name">WorkoutPlannerApp</string>

    <!-- menu items -->
    <string name="menu_home">Home</string>
    <string name="menu_manage_workouts">Manage workouts</string>
    <string name="menu_manage_week">Manage week</string>

    <!-- rep range spinner -->
    <string-array name="spinner_items">
        <item>1-3 reps</item>
        <item>3-6 reps</item>
        <item>6-10 reps</item>
        <item>8-12 reps</item>
        <item>12-15 reps</item>
        <item>15-20 reps</item>
        <item>20+ reps</item>
    </string-array>

    <!-- button values -->
    <string name="button_save">Save</string>
    <string name="button_select">Select</string>
    <string name="button_update">Update</string>
    <string name="button_cancel">Cancel</string>

    <!-- default values -->
    <string name="name">Name</string>
    <string name="weeks">Weeks</string>
    <string name="workouts">Workouts</string>
    <string name="user_name">User Name</string>
    <string name="exercise_name">Exercise name</string>
    <string name="workout_name">Workout name</string>
    <string name="week_name">Week name</string>
    <string name="week_day">Week day</string>
    <string name="description">Description</string>
    <string name="reps">Repetitions</string>
    <string name="sets">Number of sets</string>
    <string name="setsNumDefault" translatable="false">1</string>

    <!-- home fragment -->
    <string name="hello_user">Hello %1$s,</string>
    <string name="welcome_back">welcome back.</string>
    <string name="ready_to_do">Ready to do what you love today?</string>
    <string name="what_week">What week of training are you using?</string>

    <!-- Week days -->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!-- Validation messages -->
    <string name="failure_update_name">Error updating name</string>
    <string name="failure_default">An error occurred</string>
    <string name="cant_delete_active_week">You cannot delete the active week</string>

    <string name="success_create_workout">Workout created successfully</string>"
    <string name="success_edit_workout">Workout edited successfully</string>"
    <string name="success_delete_workout">Workout deleted successfully</string>"
    <string name="failure_create_workout">Error creating the workout</string>
    <string name="failure_delete_workout">Error deleting the workout</string>
    <string name="failure_edit_workout">Error editing the workout</string>
    <string name="failure_load_workout">Error loading the workout</string>

    <string name="success_create_week">Week created successfully</string>"
    <string name="success_edit_week">Week edited successfully</string>"
    <string name="success_delete_week">Week deleted successfully</string>"
    <string name="failure_create_week">Error creating the week</string>
    <string name="failure_delete_week">Error deleting the week</string>
    <string name="failure_edit_week">Error editing the week</string>
    <string name="failure_load_week">Error loading the week</string>

    <string name="success_create_exercise">Exercise created successfully</string>"
    <string name="success_edit_exercise">Exercise edited successfully</string>"
    <string name="success_delete_exercise">Exercise deleted successfully</string>"
    <string name="failure_delete_exercise">Error deleting the exercise</string>"
    <string name="failure_load_exercise">Error loading the exercise</string>"
    <string name="failure_edit_exercise">Error editing the exercise</string>"

    <!-- EditText error messages -->
    <string name="fill_name">Fill the name before continue</string>"


    <string name="fill_sets">Fill the number of sets before continue</string>"
    <string name="fill_exercise_name">Fill the exercise name before continue</string>"
    <string name="fill_exercise_description">Fill the exercise description before continue</string>"

    <string name="fill_week_name">Fill the week name before continue</string>"
    <string name="fill_week_description">Fill the week description before continue</string>"

    <string name="fill_workout_name">Fill the workout name before continue</string>"
    <string name="fill_workout_description">Fill the workout description before continue</string>"

    <!-- Dialog messages-->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="fill_all_fields">Fill all fields before continue</string>"

    <string name="update_name">Update your name</string>

    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    <string name="new_workout_title">Create workout</string>
    <string name="delete_workout_title">Delete workout</string>
    <string name="delete_workout_message">Are you sure you want to delete this workout?</string>

    <string name="new_exercise_title">Create exercise</string>
    <string name="delete_exercise_title">Delete exercise</string>
    <string name="delete_exercise_message">Are you sure you want to delete this exercise?</string>

    <string name="new_week_title">Create week</string>
    <string name="delete_week_title">Delete week</string>
    <string name="delete_week_message">Are you sure you want to delete this week?</string>

    <!-- ViewHolder messages -->
    <string name="rest_day">Rest Day</string>
    <string name="rest_day_description">Stay at home day</string>

    <!-- Database default values -->
    <string name="abc_workout">ABC Workout sheet</string>
    <string name="abc_workout_description">Workout plan for beginners, three days a week.</string>

    <!-- A WORKOUT -->
    <string name="A_workout">A Workout</string>
    <string name="A_workout_description">Back workout for beginners, focus on back, biceps and shoulder.</string>

    <string name="lat_pulldown">Lat pulldown</string>
    <string name="lat_pulldown_description">Focus on back, rest 45 to 90 seconds.</string>
    <string name="lat_pulldown_sets_and_reps">6 sets, 10 to 15 reps</string>

    <string name="low_row">Low row</string>
    <string name="low_row_description">Focus on lower back, rest 60 to 75 seconds.</string>
    <string name="low_row_sets_and_reps">6 sets, 8 to 12 reps</string>

    <string name="hammer_curl">Hammer curl</string>
    <string name="hammer_curl_description">Focus on biceps brachial, rest 30 to 50 seconds.</string>
    <string name="hammer_curl_sets_and_reps">4 sets, 6 to 8 reps</string>

    <string name="seated_reverse_fly">Seated reverse fly</string>
    <string name="seated_reverse_fly_description">Focus on the back of the shoulders, rest 45 to 60 seconds.</string>
    <string name="seated_reverse_fly_sets_and_reps">4 sets, 12 to 15 reps</string>

    <!-- B WORKOUT -->
    <string name="B_workout">B Workout</string>
    <string name="B_workout_description">Push workout for beginners, focus on chest, shoulders and triceps.</string>

    <string name="bench_press">Bench press</string>
    <string name="bench_press_description">Focus on chest, rest 60 to 90 seconds.</string>
    <string name="bench_press_sets_and_reps">6 sets, 6 to 8 reps</string>

    <string name="inclined_bench_press">Inclined bench press</string>
    <string name="inclined_bench_press_description">Focus on upper chest, rest 60 to 90 seconds.</string>
    <string name="inclined_bench_press_sets_and_reps">4 sets, 8 to 12 reps</string>

    <string name="cable_triceps_extension">Cable triceps extension</string>
    <string name="cable_triceps_extension_description">Focus on triceps, rest 45 to 60 seconds.</string>
    <string name="cable_triceps_extension_sets_and_reps">4 sets, 10 to 12 reps</string>

    <string name="lateral_raise">Lateral raise</string>
    <string name="lateral_raise_description">Focus on shoulders, rest 60 to 90 seconds.</string>
    <string name="lateral_raise_sets_and_reps">3 sets, 15 to 20 reps</string>

    <!-- C WORKOUT -->
    <string name="C_workout">C Workout</string>
    <string name="C_workout_description">Legs workout for beginners, focus on quadriceps, hamstrings and calves.</string>

    <string name="squat">Squat</string>
    <string name="squat_description">Focus on quads and glutes, rest 60 to 90 seconds.</string>
    <string name="squat_sets_and_reps">8 sets, 6 to 8 reps</string>

    <string name="stiff">Stiff</string>
    <string name="stiff_description">Focus on hamstrings, rest 60 to 90 seconds.</string>
    <string name="stiff_sets_and_reps">6 sets, 10 to 12 reps</string>

    <string name="leg_press">Leg press</string>
    <string name="leg_press_description">Focus on quads, rest 90 to 120 seconds.</string>
    <string name="leg_press_sets_and_reps">4 sets, 12 to 15 reps</string>

    <string name="seated_calves">Seated calves</string>
    <string name="seated_calves_description">Focus on calves, rest 45 to 60 seconds.</string>
    <string name="seated_calves_sets_and_reps">4 sets, 15 to 20 reps</string>


</resources>