<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_exercise_show"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp">

    <TextView
        android:id="@+id/text_show_exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_show_exercise_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <TextView
        android:id="@+id/text_show_exercise_reps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reps" />

    <View
        android:id="@+id/divider16"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider" />
</LinearLayout>