<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_workout_day_week_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/week_day" />

    <ImageView
        android:id="@+id/image_new_workout_day"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:visibility="gone"
        app:srcCompat="@drawable/baseline_add_box_24" />

    <LinearLayout
        android:id="@+id/layout_workout_day_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_workout_day_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_workout_day_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_workout_day_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_delete_workout_day"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/round_delete_24" />
    </LinearLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/listDivider" />
</LinearLayout>