<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_workout_day_item"
    android:layout_width="120dp"
    android:layout_height="200dp"
    android:elevation="1dp"
    android:fadingEdgeLength="2dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="2dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="2dp"
        android:elevation="2dp"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="3dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_day_of_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/week_day" />

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/text_workout_of_day_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/workout_name"
                android:textAlignment="center" />

            <View
                android:id="@+id/divider10"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/text_workout_of_day_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:text="@string/description"
                android:textAlignment="center" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>